# pyBrainML

./: .gitignore  LICENSE  README.md  board_connect_test.py  data_example.json  es.py  pyproject.toml  requirements.txt  setup.sh  test.json
examples/: eeg_stream.py  exg_stream.py  fft_stream.py
src/: BrainWave.py
src/pyBrainML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pybrainml/: __init__.py  test.py
tests/: test.py  yaspin_test.py
